fix: adding workaround to fix strong refs to maui types

--- a/samples/MauiEmbedding/MauiProjects/MauiControlsExternal/MauiControlsExternal.csproj
+++ b/samples/MauiEmbedding/MauiProjects/MauiControlsExternal/MauiControlsExternal.csproj
@@ -15,24 +15,9 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'tizen'">6.5</SupportedOSPlatformVersion>
 	</PropertyGroup>
 
-	 <ItemGroup>
-	   <Compile Update="App.xaml.cs">
-	     <DependentUpon>%(Filename)</DependentUpon>
-	   </Compile>
-	 </ItemGroup>
-
-	 <ItemGroup>
-	   <MauiXaml Update="App.xaml">
-	     <Generator>MSBuild:Compile</Generator>
-	   </MauiXaml>
-	   <MauiXaml Update="EmbeddedControl.xaml">
-	     <Generator>MSBuild:Compile</Generator>
-	   </MauiXaml>
-	   <MauiXaml Update="Styles\Colors.xaml">
-	     <Generator>MSBuild:Compile</Generator>
-	   </MauiXaml>
-	   <MauiXaml Update="Styles\Styles.xaml">
-	     <Generator>MSBuild:Compile</Generator>
-	   </MauiXaml>
-	 </ItemGroup> 
+	<ItemGroup>
+		<PackageReference Include="Syncfusion.Maui.Core" Version="22.2.9" />
+		<PackageReference Include="Syncfusion.Maui.Charts" Version="22.2.9" />
+		<PackageReference Include="Syncfusion.Maui.DataGrid" Version="22.2.9" />
+	</ItemGroup>
 </Project>
