fix: Prevent duplicate CreateOnUpdateMetadataAttribute attributes

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -26,6 +26,8 @@
 		<!-- Ensures the .xr.xml files are generated in a proper layout folder -->
 		<GenerateLibraryLayout>true</GenerateLibraryLayout>
 		<ImplicitUsings>true</ImplicitUsings>
+
+		<UnoExtensionsGeneration_DisableCreateNewOnMetadataUpdateAttribute>True</UnoExtensionsGeneration_DisableCreateNewOnMetadataUpdateAttribute>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)'=='Release'">
