chore: Tidy up api
(cherry picked from commit a17b1bbfe669666ea2912459f801588e0fef4b08)

--- a/samples/MauiEmbedding/MauiEmbedding.Mobile/MauiEmbedding.Mobile.csproj
+++ b/samples/MauiEmbedding/MauiEmbedding.Mobile/MauiEmbedding.Mobile.csproj
@@ -39,7 +39,7 @@
 		<PackageReference Include="Telerik.UI.for.Maui" Condition="$(_UseTelerik)"/>
 		<PackageReference Include="CommunityToolkit.Maui" />
 		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" />
-		<PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />
+		<!--<PackageReference Include="Uno.WinUI.RemoteControl" Condition="'$(Configuration)'=='Debug'" />-->
 	</ItemGroup>
 	<Choose>
 		<When Condition="$(IsAndroid)">
