--- a/src/Uno.Extensions.Maui.UI/Uno.Extensions.Maui.WinUI.csproj
+++ b/src/Uno.Extensions.Maui.UI/Uno.Extensions.Maui.WinUI.csproj
@@ -103,4 +103,11 @@
 		</Otherwise>
 	</Choose>
 
+	<ItemGroup>
+	  <Compile Include="Internals\LinkedServiceProvider.cs" />
+	  <Compile Include="Internals\LinkedServiceProviderFactory.cs" />
+	  <Compile Include="Internals\LinkedServiceScope.cs" />
+	  <Compile Include="Internals\LinkedServiceScopeFactory.cs" />
+	</ItemGroup>
+
 </Project>
