chore: Reduce copying of libraries

--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -89,4 +89,11 @@
 	<Import Project="winappsdk-workaround.targets" Condition="exists('winappsdk-workaround.targets')" />
 	<Import Project="xamarinmac-workaround.targets" Condition="exists('xamarinmac-workaround.targets') and $(TargetFramework.ToLower().StartsWith('xamarin')) and $(TargetFramework.ToLower().Contains('mac'))" />
 	<Import Project="Directory.UnoMetadata.targets" />
+
+	<ItemDefinitionGroup>
+		<ProjectReference>
+			 <!--Prevent projects from duplicating assemblies in every output folder-->
+			<Private Condition="'$(OutputType)' == 'library' and '$(NugetOverrideVersion)'==''">false</Private>
+		</ProjectReference>
+	</ItemDefinitionGroup> 
 </Project>
