chore: Preventing multiple icon downloads

--- a/src/Directory.UnoMetadata.targets
+++ b/src/Directory.UnoMetadata.targets
@@ -13,7 +13,7 @@
 			<IconUrl>https://uno-assets.platform.uno/logos/uno.png</IconUrl>
 		</PropertyGroup>
 
-		<DownloadFile SourceUrl="$(IconUrl)" DestinationFolder="$(IntermediateOutputPath)">
+		<DownloadFile SourceUrl="$(IconUrl)" DestinationFolder="$(MSBuildThisFileDirectory)\.icons">
 			<Output TaskParameter="DownloadedFile" PropertyName="UnoPackageDownloadedIcon" />
 		</DownloadFile>
 
