--- a/samples/Playground/Directory.Packages.props
+++ b/samples/Playground/Directory.Packages.props
@@ -27,14 +27,14 @@
 		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
 		<PackageVersion Include="Uno.Material" Version="4.0.4" />
 		<PackageVersion Include="Uno.Material.WinUI" Version="4.0.4" />
-		<PackageVersion Include="Uno.Toolkit.UI" Version="5.0.15" />
-		<PackageVersion Include="Uno.Toolkit.UI.Material" Version="5.0.15" />
 		<PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.15" />
 		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="5.0.15" />
+		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.15" />
 		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
 		<PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.20" />
 		<PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.20" />
 		<PackageVersion Include="Uno.WinUI" Version="5.0.19" />
+		<PackageVersion Include="Uno.WinUI.WebAssembly" Version="5.0.19" />
 		<PackageVersion Include="Uno.WinUI.Skia.Gtk" Version="5.0.19" />
 		<PackageVersion Include="Uno.WinUI.DevServer" Version="5.0.19" />
 		<PackageVersion Include="Uno.Resizetizer" Version="1.2.0" />
