Added GetClaims to make both IdToken and AccessToken claims avaliable

--- a/src/Uno.Extensions.Authentication/Uno.Extensions.Authentication.csproj
+++ b/src/Uno.Extensions.Authentication/Uno.Extensions.Authentication.csproj
@@ -23,6 +23,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Hosting" />
 		<PackageReference Include="Microsoft.Extensions.Logging" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" />
 		<PackageReference Include="System.Threading.Tasks.Extensions" />
 	</ItemGroup>
 	<ItemGroup>
