--- a/samples/Playground/Directory.Packages.props
+++ b/samples/Playground/Directory.Packages.props
@@ -23,22 +23,22 @@
 		<PackageVersion Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
 		<PackageVersion Include="Uno.Extensions.Logging.OSLog " Version="1.4.0" />
 		<PackageVersion Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.3.0" />
-		<PackageVersion Include="Uno.Material" Version="3.0.0-dev.252" />
-		<PackageVersion Include="Uno.Material.WinUI" Version="3.0.0-dev.252" />
-		<PackageVersion Include="Uno.Toolkit.UI" Version="3.1.0-dev.24" />
-		<PackageVersion Include="Uno.Toolkit.UI.Material" Version="3.1.0-dev.24" />
-		<PackageVersion Include="Uno.Toolkit.WinUI" Version="3.1.0-dev.24" />
-		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="3.1.0-dev.24" />
-		<PackageVersion Include="Uno.UI" Version="5.0.0-dev.2770" />
-		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.0-dev.2770" />
-		<PackageVersion Include="Uno.UI.RemoteControl" Version="5.0.0-dev.2770" />
-		<PackageVersion Include="Uno.UI.Skia.Gtk" Version="5.0.0-dev.2770" />
-		<PackageVersion Include="Uno.UI.Skia.Tizen" Version="5.0.0-dev.2770" />
-		<PackageVersion Include="Uno.UI.Skia.Wpf" Version="5.0.0-dev.2770" />
-		<PackageVersion Include="Uno.UI.WebAssembly" Version="5.0.0-dev.2770" />
+		<PackageVersion Include="Uno.Material" Version="4.0.1" />
+		<PackageVersion Include="Uno.Material.WinUI" Version="4.0.1" />
+		<PackageVersion Include="Uno.Toolkit.UI" Version="5.0.9" />
+		<PackageVersion Include="Uno.Toolkit.UI.Material" Version="5.0.9" />
+		<PackageVersion Include="Uno.Toolkit.WinUI" Version="5.0.9" />
+		<PackageVersion Include="Uno.Toolkit.WinUI.Material" Version="5.0.9" />
+		<PackageVersion Include="Uno.UI" Version="5.0.13" />
+		<PackageVersion Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="5.0.13" />
+		<PackageVersion Include="Uno.UI.RemoteControl" Version="5.0.13" />
+		<PackageVersion Include="Uno.UI.Skia.Gtk" Version="5.0.13" />
+		<PackageVersion Include="Uno.UI.Skia.Tizen" Version="5.0.13" />
+		<PackageVersion Include="Uno.UI.Skia.Wpf" Version="5.0.13" />
+		<PackageVersion Include="Uno.UI.WebAssembly" Version="5.0.13" />
 		<PackageVersion Include="Uno.UniversalImageLoader" Version="1.9.36" />
 		<PackageVersion Include="Uno.Wasm.Bootstrap" Version="7.0.20" />
 		<PackageVersion Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.20" />
-		<PackageVersion Include="Uno.WinUI" Version="5.0.0-dev.2770" />
+		<PackageVersion Include="Uno.WinUI" Version="5.0.13" />
 	</ItemGroup>
 </Project>
