fix: Correcting logic for navigating by viewmodel

--- a/src/Uno.Extensions.Maui.WinUI.Markup/Uno.Extensions.Maui.WinUI.Markup.csproj
+++ b/src/Uno.Extensions.Maui.WinUI.Markup/Uno.Extensions.Maui.WinUI.Markup.csproj
@@ -4,7 +4,7 @@
 	<PropertyGroup>
 		<UseMaui>true</UseMaui>
 		<RootNamespace>Uno.Extensions.Maui</RootNamespace>
-		<NoWarn>$(NoWarn);NU5104;NU5048;NU1009;NU1504</NoWarn>
+		<NoWarn>$(NoWarn);NU5104;NU5048;NU1009;NU1504;CS0436</NoWarn>
 		<Description>Extensions to embed .NET MAUI controls within your Uno app using C# Markup.</Description>
 		<!--Temporary disable missing XML doc until fixed in the whole package-->
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
