fix: Replace calls to InvokeJS with JSImports

--- a/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.WinUI.Wasm.csproj
+++ b/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.WinUI.Wasm.csproj
@@ -9,7 +9,16 @@
 
 	<PropertyGroup>
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <None Remove="WasmScripts\helpers.js" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="WasmScripts\helpers.js" />
+	</ItemGroup>
 
 
 	<ItemGroup>
