--- a/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.WinUI.Skia.csproj
+++ b/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.WinUI.Skia.csproj
@@ -13,6 +13,12 @@
 		<DefineConstants>$(DefineConstants);WINUI</DefineConstants>
 	</PropertyGroup>
 
+	<ItemGroup>
+	  <Compile Remove="WasmScripts\**" />
+	  <EmbeddedResource Remove="WasmScripts\**" />
+	  <None Remove="WasmScripts\**" />
+	</ItemGroup>
+
 
 	<ItemGroup>
 		<PackageReference Include="Uno.WinUI" />
