fix: Adding AllowUnsafeBlocks as required

--- a/samples/Playground/Playground.Wasm/Playground.Wasm.csproj
+++ b/samples/Playground/Playground.Wasm/Playground.Wasm.csproj
@@ -12,6 +12,7 @@
       https://aka.platform.uno/wasm-deeplink
     -->
 		<WasmShellWebAppBasePath>/</WasmShellWebAppBasePath>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
 		<MonoRuntimeDebuggerEnabled>true</MonoRuntimeDebuggerEnabled>
