--- a/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.Wasm.csproj
+++ b/src/Uno.Extensions.Hosting.UI/Uno.Extensions.Hosting.UWP.Wasm.csproj
@@ -5,6 +5,7 @@
 		<AssemblyName>Uno.Extensions.Hosting.UWP</AssemblyName>
 		
 		<TargetFramework>net7.0</TargetFramework>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 	<ItemGroup>
