--- a/src/Uno.Extensions.Storage.UI/common.props
+++ b/src/Uno.Extensions.Storage.UI/common.props
@@ -4,6 +4,8 @@
 
 		<!--Temporary disable missing XML doc until fixed in the whole package-->
 		<WarningsNotAsErrors>$(WarningsNotAsErrors);CS1591</WarningsNotAsErrors>
+	
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
 
