--- a/testing/TestHarness/TestHarness.Legacy.Wasm/TestHarness.Legacy.Wasm.csproj
+++ b/testing/TestHarness/TestHarness.Legacy.Wasm/TestHarness.Legacy.Wasm.csproj
@@ -5,6 +5,7 @@
 		<NoWarn>$(NoWarn);NU1701</NoWarn>
 		<AssemblyName>TestHarnessApp</AssemblyName>
 		<ImplicitUsings>disable</ImplicitUsings>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 	<PropertyGroup Condition="'$(Configuration)'=='Debug'">
 		<MonoRuntimeDebuggerEnabled>true</MonoRuntimeDebuggerEnabled>
