--- a/src/Uno.Extensions.Reactive.UI/common.props
+++ b/src/Uno.Extensions.Reactive.UI/common.props
@@ -9,6 +9,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<EditorConfigFiles Include="../Uno.Extensions.Reactive/.editorconfig" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" />
 	</ItemGroup>
   
