--- a/src/Uno.Extensions.Reactive/.editorconfig
+++ b/src/Uno.Extensions.Reactive/.editorconfig
@@ -1,5 +1,5 @@
 root = false
 
 [*.cs]
-dotnet_diagnostic.CA2007.severity = suggestion
+dotnet_diagnostic.CA2007.severity = error
 dotnet_diagnostic.CA2016.severity = error
