--- a/src/Uno.Extensions.Reactive.Tests/Uno.Extensions.Reactive.Tests.csproj
+++ b/src/Uno.Extensions.Reactive.Tests/Uno.Extensions.Reactive.Tests.csproj
@@ -5,6 +5,7 @@
 		<IsPackable>false</IsPackable>
 		<EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
 		<CompilerGeneratedFilesOutputPath>obj/g</CompilerGeneratedFilesOutputPath>
+		<InterceptorsPreviewNamespaces>$(InterceptorsPreviewNamespaces);Uno.Extensions.Reactive.Tests</InterceptorsPreviewNamespaces>
 	</PropertyGroup>
 
 	<ItemGroup>
