--- a/src/tfms-non-ui.props
+++ b/src/tfms-non-ui.props
@@ -4,6 +4,6 @@
 	that are part of a cross-platform library (eg Uno.Extensions.Hosting.UWP.Wasm)-->
 <Project>
 	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
+		<TargetFrameworks>netstandard2.0;net7.0</TargetFrameworks>
 	</PropertyGroup>
 </Project>
