--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -100,6 +100,8 @@
           items:
             - name: TextBlock Run
               href: Overview/Markup/Appendix/TextBlockRun.md
+            - name: Accessing a Control Instance
+              href: Overview/Markup/Appendix/AccessingControlInstance.md
     - name: MVUX
       href: Overview/Mvux/Overview.md
       items:
