--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -72,7 +72,7 @@
       items:
         - name: Overview
           href: Overview/Markup/Overview.md
-        - name: Dependency Property Builder
+        - name: Binding, Static & Theme Resources
           href: Overview/Markup/DependencyPropertyBuilder.md
           items:
             - name: Binding 101
