--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -67,7 +67,7 @@
           href: Learn/Tutorials/Localization/HowTo-Localization.md
     - name: C# Markup
       href: Learn/Markup/toc.yml
-      topicHref: xref:Overview.Markup.Overview
+      topicHref: xref:Uno.Extensions.Markup.Overview
     - name: MVUX
       href: Overview/Mvux/Overview.md
       items:
