chore: Updating maui
(cherry picked from commit 2fb7c93b9771a731286b3bf275a3b541d59981e8)

--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -148,23 +148,8 @@
         - name: Overview
           href: Overview/Validation/ValidationOverview.md
     - name: .NET MAUI Embedding
-      items:
-        - name: Overview
-          href: Overview/Maui/MauiOverview.md
-        - name: Third Party Controls - ArcGIS
-          href: Overview/Maui/ThirdParty-EsriMaps.md
-        - name: Third Party Controls - DevExpress
-          href: Overview/Maui/ThirdParty-DevExpress.md
-        - name: Third Party Controls - GrapeCity
-          href: Overview/Maui/ThirdParty-GrapeCity.md
-        - name: Third Party Controls - GrialKit
-          href: Overview/Maui/ThirdParty-GrialKit.md
-        - name: Third Party Controls - .NET MAUI Community Toolkit
-          href: Overview/Maui/ThirdParty-MauiCommunityToolkit.md
-        - name: Third Party Controls - Syncfusion
-          href: Overview/Maui/ThirdParty-Synfusion.md
-        - name: Third Party Controls - Telerik
-          href: Overview/Maui/ThirdParty-Telerik.md
+      href: Learn/Maui/toc.yml
+      topicHref: xref:Uno.Extensions.Maui.Overview
 - name: Reference
   items:
     - name: MVUX
